# air-clicker-pro

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  config.sh  run.sh
src/: main.cpp
